fixed layout issue

--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -27,7 +27,7 @@ amp-img {
 
 $rs: 16px;
 
-$font-serif: "Neuton",Georgia,Cambria,"Times New Roman",Times,'Lora', serif;
+$font-serif: Georgia,Cambria,"Times New Roman",Times,'Lora', serif;
 $font-sans: "Helvetica Neue", 'Open Sans', Arial, Helvetica, sans-serif;
 
 @mixin respond-to($breakpoint) {
@@ -47,7 +47,7 @@ main {
 
 body {
   background-color: #fff;
-  /*font-family: $font-sans;*/
+  font-family: $font-sans;
   margin: 0;
   padding: 0;
   text-rendering: optimizeLegibility;
@@ -129,6 +129,9 @@ body {
 
   article {
     padding: 20px 0;
+    border-bottom: 1px solid #f2f2f0;
+    &:last-child {
+      border-bottom: 0px;
     }
     .post-title {
       letter-spacing: -0.02em;
@@ -228,7 +231,6 @@ body {
     line-height: 1.1;
     color: #333332;
     margin-bottom: 50px;
-    font-family: $font-sans;
   }
   .author-image {
     background-image: url({{ site.baseurl }}{{site.author_image}});
@@ -261,11 +263,10 @@ body {
     color: #333333;
     h1, h2, h3 {
       font-family: $font-sans;
-      letter-spacing: -0.02em;
     }
     h3, h4, h5, h6 {
       letter-spacing: -0.02em;
-      font-weight: 400;
+      font-weight: 700;
       font-style: normal;
       font-size: 24px;
       line-height: 1.3;
@@ -273,17 +274,12 @@ body {
       margin-bottom: 0px;
       font-family: $font-sans;
     }
-    h2 {
-      font-size: 34px;
-      font-weight: 700;
-    }
     h3 {
-      font-size: 30px;
-      font-weight: 700;
+      font-size: 36px;
     }
-    h1 {
+    h2, h1 {
       letter-spacing: -0.02em;
-      font-weight: 600;
+      font-weight: 700;
       font-style: normal;
       font-size: 42px;
       line-height: 1.2;
@@ -301,7 +297,7 @@ body {
     p {
       font-weight: 400;
       font-style: normal;
-      font-size: 21px;
+      font-size: 22px;
       line-height: 1.59;
       letter-spacing: -.002em;
       margin-top: 30px;
@@ -356,15 +352,14 @@ body {
       }
     }
     ul, ol {
-      padding: 25px 0 0 0;
+      padding: 0 0 30px;
       margin: 0;
-      margin-left:25px
     }
     li {
       padding: 0;
       font-weight: 400;
       font-style: normal;
-      font-size: 21px;
+      font-size: 23px;
       line-height: 30px;
       margin-left: 30px;
       margin-bottom: 12px;
@@ -505,7 +500,7 @@ code {
   font-size: 15px;
   border: 1px solid #e8e8e8;
   border-radius: 3px;
-  color: gray;
+  background-color: #eeeeff;
 }
 
 code {
